--- a/src/Components/VideoArea/commentsarea.scss
+++ b/src/Components/VideoArea/commentsarea.scss
@@ -26,7 +26,6 @@
                 }
             }
 
-
             .commentBody {
                 flex-grow: 1;
                 font-size: 1rem;
@@ -57,88 +56,89 @@
             display: none;
         }
     }
-}
 
-.commentsSection-comments {
-    
-    .comments-comment {
-        display: flex;
-        margin-top: 1rem;
-
-        .avatarContainer{
-            cursor: pointer;
-            align-self: flex-start;
-                
-            img {
-                border-radius: 50%;
-                object-fit: contain;
-                width: 3rem;
-            }
-            
-            svg {
-                border-radius: 50%;
-                width: 3rem;
-                height: 100%;
-            }
-        }
-
-        .comment-body {
+    .commentsSection-comments {
+        
+        .comments-comment {
+            position: relative;
             display: flex;
-            flex-direction: column;
-            margin-left: 1rem;
-            flex: 0.95;
-
-            .body-header {
+            margin-top: 1rem;
+    
+            .avatarContainer{
+                cursor: pointer;
+                align-self: flex-start;
+                    
+                img {
+                    border-radius: 50%;
+                    object-fit: contain;
+                    width: 3rem;
+                }
+                
+                svg {
+                    border-radius: 50%;
+                    width: 3rem;
+                    height: 100%;
+                }
+            }
+    
+            .comment-body {
                 display: flex;
-                gap: 0.5rem;
-
-                p {
-                    margin: 0;
+                flex-direction: column;
+                margin-left: 1rem;
+                flex: 0.95;
+    
+                .body-header {
+                    display: flex;
+                    gap: 0.5rem;
+    
+                    p {
+                        margin: 0;
+                        font-size: 0.9rem;
+                    }
+                }
+    
+                .comment-text {
                     font-size: 0.9rem;
                 }
             }
-
-            .comment-text {
-                font-size: 0.9rem;
+    
+            &:hover {
+    
+                .comment-menu {
+    
+                    .dots-container {
+                        display:flex;
+                    }
+                }
             }
-        }
-
-        &:hover {
-
+    
             .comment-menu {
-
+                flex: 0.05;
+                
                 .dots-container {
-                    display:flex;
-                }
-            }
-        }
-
-        .comment-menu {
-            flex: 0.05;
-            
-            .dots-container {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 3px;
-                
-                border-radius: 50%;
-                padding: 0.5rem;
-                height: 1rem;
-                width: 1rem;
-                
-                cursor: pointer;
-                display: none;
-
-                &:active {
-                    background-color: darkgrey;
-                }
-
-                .dots {
-                    width: 3px;
-                    height: 3px;
-                    background-color: #454545;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 3px;
+                    
                     border-radius: 50%;
+                    padding: 0.5rem;
+                    height: 1rem;
+                    width: 1rem;
+                    
+                    cursor: pointer;
+                    display: none;
+    
+                    &:active {
+                        background-color: darkgrey;
+                    }
+    
+                    .dots {
+                        width: 3px;
+                        height: 3px;
+                        background-color: #454545;
+                        border-radius: 50%;
+                    }
                 }
             }
         }
