--- a/src/Components/VideoArea/commentsarea.scss
+++ b/src/Components/VideoArea/commentsarea.scss
@@ -138,6 +138,7 @@
                         height: 3px;
                         background-color: #454545;
                         border-radius: 50%;
+                        pointer-events: none;
                     }
                 }
             }
