--- a/src/Components/MainArea/VideoTile/videotile.scss
+++ b/src/Components/MainArea/VideoTile/videotile.scss
@@ -1,10 +1,12 @@
-.video-tile {
+@import '../../../globals.scss';
+
+.videoTile {
     margin: 10px;
     max-width: 350px;
     max-height: 300px;
     cursor: pointer;
     
-    .ImageArea {
+    .videoTile-imageArea {
         width: 100%;
         height: 68%;
         display: flex;
@@ -19,14 +21,14 @@
         }
     }
     
-    .VideoDescription {
+    .videoTile-videoDescription {
         display: flex;
         width: 100%;
         height: 25%;
         justify-content: space-around;
         padding-top: 10px;
 
-        .UserIcon {
+        .videoDescription-userIcon {
             flex: 0.14;
 
             display: flex;
@@ -42,11 +44,15 @@
             }
         }
 
-        .Description {
+        .videoDescription-description {
             flex: 0.80;
             display: flex;
             flex-direction: column;
-            
+
+            h2, h3 {
+                color: $main-font-color;
+            }
+
             h2 {
                 max-height: 3rem;
                 overflow: hidden;
@@ -59,27 +65,20 @@
             h3{
                 font-size: clamp(0.8rem, 1.4vmin, 1rem);
                 font-weight: 400;
-                color: #616161;
                 margin: 0;
                 padding: 0;
             }
         }
+    }
+}
 
-        .VideoOptions {
-            flex: 0.05;
+// dark theme changes
+.videoTile[darktheme='1'] {
 
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+    .videoTile-videoDescription {
 
-            gap: 3px;
-
-            .dots {
-                width: 3px;
-                height: 3px;
-                background-color: #454545;
-                border-radius: 50%;
-            }
+        h2, h3 {
+            color: $main-fontcolor-dark;
         }
     }
 }
