--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,12 @@
+@import './globals.scss';
+
 .feedArea {
     display: flex;
+    // background-color: $main-background-color-dark;
 }
+
+// @include mobile {
+//     .feedArea {
+//         width: 100vw;
+//     }
+// }
