--- a/src/globals.scss
+++ b/src/globals.scss
@@ -33,6 +33,7 @@ $sideMenu-expanded-width: 250px;
 $icons-backgroundColor-hover: lightgrey;
 $icons-backgroundColor-active: darkgrey;
 $icons-backgroundColor-active-dark: #454545;
+$icons-backgroundColor: lightgrey;
 $icons-backgroundColor-dark: #696969;
 $icons-backgroundColor-hover-dark: #434343;
 $scrollbar-thumb-background-color: #0009;
