--- a/src/globals.scss
+++ b/src/globals.scss
@@ -46,6 +46,7 @@ $buttons-backgroundColor-hover-dark: lightgrey;
 $buttons-backgroundColor-active: #434343;
 $buttons-backgroundColor-active-dark: darkgrey;
 $buttons-divider-color: #4445;
+$buttons-divider-color-dark: #FFF5;
 $buttons-inactive-color: #FFF4;
 $buttons-inactive-fontColor: #0002;
 
