--- a/src/Components/HeaderMenu/headermenu.scss
+++ b/src/Components/HeaderMenu/headermenu.scss
@@ -39,7 +39,7 @@
             }
     
             .buttonLine {
-                width: 20px; //TODO: see if can be calculated
+                width: 20px;
                 height: 1px;
                 background-color: $main-font-color;
             }
