--- a/src/globals.scss
+++ b/src/globals.scss
@@ -18,13 +18,14 @@ $headerMenu-height: 50px;
 $headerMenu-userMenu-backgroundColor: #353535;
 
 $createVideo-backgroundColor: #444;
+$createVideo-fontColor: #FFFE;
 $createVideo-icon-backgroundColor-hover: #A3A3A3;
 $createVideo-icon-backgroundColor-active: lightgrey;
 $createVideo-icon-color: #A3A3A3;
 $createVideo-icon-color-hover: #232323;
 $createVideo-cancelIcon-color-hover: rgba(131, 0, 22, 0.719);
 $createVideo-borderColor: #A3A3A3;
-$createVideo-borderColor-hover: #fffA;;
+$createVideo-borderColor-hover: #fffA;
 
 $sideMenu-folded-width: 60px;
 $sideMenu-folded-height: 80px;
