--- a/src/Components/MainArea/VideoTile/videotile.scss
+++ b/src/Components/MainArea/VideoTile/videotile.scss
@@ -1,88 +1,108 @@
-@import '../../../globals.scss';
+@import "../../../globals.scss";
 
 .videoTile {
-    margin: 10px;
-    max-width: 350px;
-    max-height: 300px;
-    cursor: pointer;
-    
-    .videoTile-imageArea {
-        width: 100%;
-        height: 68%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 10px;
+  flex: 1;
+  margin: 10px;
+  max-width: 350px;
+  max-height: 300px;
+  cursor: pointer;
+  position: relative;
+
+  .videoTile-imageArea {
+    width: 100%;
+    height: 68%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      object-fit: contain;
+    }
+
+    .videotileloading {
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-color: $main-background-loading;
+      border-radius: 10px;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  .videoTile-videoDescription {
+    display: flex;
+    width: 100%;
+    height: 25%;
+    justify-content: space-around;
+    padding-top: 10px;
+
+    .videoDescription-userIcon {
+      flex: 0.14;
+
+      display: flex;
+
+      img {
+        max-height: 40px;
+        max-width: 40px;
+        min-width: 30px;
+        min-height: 30px;
+        object-fit: contain;
+
+        border-radius: 50%;
+      }
+    }
+
+    .videoDescription-description {
+      flex: 0.8;
+      display: flex;
+      flex-direction: column;
+
+      h2,
+      h3 {
+        color: $main-font-color;
+      }
+
+      h2 {
+        max-height: 3rem;
         overflow: hidden;
+        font-size: clamp(1rem, 1.5vw, 1rem);
+        line-height: 1.2em;
+        margin: 0;
+        padding: 0;
+      }
 
-        img {
-            width: 100%;
-            object-fit: contain;
-        }
+      h3 {
+        font-size: clamp(0.8rem, 1.4vmin, 1rem);
+        font-weight: 400;
+        margin: 0;
+        padding: 0;
+      }
     }
-    
-    .videoTile-videoDescription {
-        display: flex;
-        width: 100%;
-        height: 25%;
-        justify-content: space-around;
-        padding-top: 10px;
-
-        .videoDescription-userIcon {
-            flex: 0.14;
-
-            display: flex;
-
-            img {
-                max-height: 40px; 
-                max-width: 40px; 
-                min-width: 30px;
-                min-height: 30px;
-                object-fit: contain;
-
-                border-radius: 50%;
-            }
-        }
-
-        .videoDescription-description {
-            flex: 0.80;
-            display: flex;
-            flex-direction: column;
-
-            h2, h3 {
-                color: $main-font-color;
-            }
-
-            h2 {
-                max-height: 3rem;
-                overflow: hidden;
-                font-size: clamp(1rem, 1.5vw, 1rem);
-                line-height: 1.2em;
-                margin: 0;
-                padding: 0;
-            }
-            
-            h3{
-                font-size: clamp(0.8rem, 1.4vmin, 1rem);
-                font-weight: 400;
-                margin: 0;
-                padding: 0;
-            }
-        }
-    }
+  }
 }
 
 // dark theme changes
-.videoTile[darktheme='1'] {
-
-    .videoTile-videoDescription {
-
-        h2, h3 {
-            color: $main-fontcolor-dark;
-        }
+.videoTile[darktheme="1"] {
+  .videoTile-imageArea {
+    .videotileloading {
+      background-color: $main-background-loading-dark;
     }
+  }
+  .videoTile-videoDescription {
+    h2,
+    h3 {
+      color: $main-fontcolor-dark;
+    }
+  }
 }
 
 .video-tile-stump {
-    cursor: default;
+  cursor: default;
 }
