fixing loading spinner

--- a/src/Components/MainArea/VideoTile/videotile.scss
+++ b/src/Components/MainArea/VideoTile/videotile.scss
@@ -9,6 +9,7 @@
   position: relative;
 
   .videoTile-imageArea {
+    position: relative;
     width: 100%;
     height: 68%;
     display: flex;
@@ -20,6 +21,7 @@
     img {
       width: 100%;
       object-fit: contain;
+      z-index: 2;
     }
 
     .videotileloading {
